@@ -1,16 +1,13 @@
-# $NetBSD: Makefile,v 1.70 2006/09/16 12:20:40 jmmv Exp $
+# $NetBSD: Makefile,v 1.71 2006/12/27 13:40:42 wulf Exp $
 
-DISTNAME=	bluefish-1.0.5
-PKGREVISION=	7
+DISTNAME=	bluefish-1.0.6
 CATEGORIES=	www
-MASTER_SITES=	http://pkedu.fbt.eitn.wau.nl/~olivier/downloads/	\
-		ftp://bluefish.advancecreations.com/bluefish/downloads/ \
-		http://bluefish.mrball.net/downloads/			\
-		ftp://ftp.ratisbona.com/pub/bluefish/downloads/		\
-		http://bluefish.shellhung.org/downloads/
+MASTER_SITES=	http://bluefish.mrball.net/stable/source/               \
+		ftp://ftp.ratisbona.com/pub/bluefish/stable/source/     \
+		http://www.bennewitz.com/bluefish/stable/source/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	wulf@ping.net.au
+MAINTAINER=	wulf@NetBSD.org
 HOMEPAGE=	http://bluefish.openoffice.nl/
 COMMENT=	GTK HTML editor for the experienced web designer
 
